kubernetes/apps/chrome/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: chrome
          image: linuxserver/chrome:154.0.8037@sha256:9e86e846d4d23c56e232282557fece6188296315fd94e4f243c5ff507b4406dc
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 3001
              name: https
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "4"
              memory: "4Gi"
          volumeMounts:
            - name: chrome-profile
              mountPath: /config
            - name: dri
              mountPath: /dev/dri
            - name: shm
              mountPath: /dev/shm
      volumes:
        - name: chrome-profile
          persistentVolumeClaim:
            claimName: chrome-pvc
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: shm
          emptyDir:
            medium: Memory
