kubernetes/apps/chrome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  selector:
    app: chrome
  ports:
    - port: 3000
      targetPort: 3000
      name: http
